--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, Paper, Scissors!</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rock, Paper, Scissors!</title>
+
+	<link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="script2.js" defer></script>
 </head>
 <body>
-    
-    <script type="text/javascript" src="script2.js"></script>
+  <div class="left-div">
+		
+	</div>
+	<div class="right-div">
+		<h1>Rock Paper Scissors!</h1>
+
+		<!-- col 80 is where you switch to a new line for readability -->
+		<p>
+			A battle royale! 64 Contestants pick their avatar and fight to the death...
+			with rock paper scissors! Contestants will face a random opponent each time,
+			the first to reach a score of 5 survives and moves on to face the next! This
+			goes on until one is left standing and is hailed champion!
+			
+			The common rules apply, rock beats scissors and so on. Starting with a timer of
+			10 seconds, the timer decrementing by 1 each round. Contestants reserve the
+			right to surrender each round at the expense of their prize.
+
+			Without further ado, let the games begin!
+		</p>
+	</div>
 </body>
 </html>
