added a template image, added preliminary avatar cards in index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,32 @@
   <script type="text/javascript" src="script2.js" defer></script>
 </head>
 <body>
+	<div class="left-div">
+		<div class="card">
+			<img src="imgs/template_avatar.png" alt="Avatar" style="width:100%">
+			<div class="container">
+				<h4><b>Herman Woodrow</b></h4>
+				<p>Baron of War</p>
+			</div>
+		</div>
+	</div>
   <div class="left-div">
-		
+		<div class="card">
+			<img src="imgs/template_avatar.png" alt="Avatar" style="width:100%">
+			<div class="container">
+				<h4><b>Sabina Peters</b></h4>
+				<p>Exarch of Energy</p>
+			</div>
+		</div>
+	</div>
+	<div class="left-div">
+		<div class="card">
+			<img src="imgs/template_avatar.png" alt="Avatar" style="width:100%">
+			<div class="container">
+				<h4><b>Messiah Blaine</b></h4>
+				<p>Cardinal of Darkness</p>
+			</div>
+		</div>
 	</div>
 	<div class="right-div">
 		<h1>Rock Paper Scissors!</h1>
