--- a/index.html
+++ b/index.html
@@ -12,25 +12,21 @@
 <body>
 	<div class="left-div">
 		<div class="card">
-			<img src="imgs/template_avatar.png" alt="Avatar" style="width:100%">
+			<img src="imgs/template_avatar.png" alt="Avatar">
 			<div class="container">
 				<h4><b>Herman Woodrow</b></h4>
 				<p>Baron of War</p>
 			</div>
 		</div>
-	</div>
-  <div class="left-div">
 		<div class="card">
-			<img src="imgs/template_avatar.png" alt="Avatar" style="width:100%">
+			<img src="imgs/template_avatar.png" alt="Avatar">
 			<div class="container">
 				<h4><b>Sabina Peters</b></h4>
 				<p>Exarch of Energy</p>
 			</div>
 		</div>
-	</div>
-	<div class="left-div">
 		<div class="card">
-			<img src="imgs/template_avatar.png" alt="Avatar" style="width:100%">
+			<img src="imgs/template_avatar.png" alt="Avatar">
 			<div class="container">
 				<h4><b>Messiah Blaine</b></h4>
 				<p>Cardinal of Darkness</p>
