--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Rock, Paper, Scissors!</title>
 
 	<link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="script2.js" defer></script>
+  <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
 	<div class="left-div">
