centered .intro-div and .input-div vertically and horizontally, made .input-div hidden by default

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
-	<div class="top-div">
+	<div class="intro-div">
 		<h1>Rock Paper Scissors!</h1>
 
 		<!-- col 80 is where you switch to a new line for readability -->
@@ -27,7 +27,7 @@
 			Do you have what it takes to win?
 		</p>
 	</div>
-	<div class="bottom-div">
+	<div class="input-div">
 		<div class="card">
 			<img src="imgs/template_avatar.png" alt="Avatar">
 			<div class="container">
