--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Rock, Paper, Scissors!</title>
 
 	<link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
 	<div class="intro-div">
@@ -27,7 +26,7 @@
 			Do you have what it takes to win?
 		</p>
 	</div>
-	<div class="input-div">
+	<div class="input-div" style="visibility: hidden">
 		<div class="card">
 			<img src="imgs/template_avatar.png" alt="Avatar">
 			<div class="container">
@@ -38,5 +37,7 @@
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src="script.js"></script>
+	<script src="jquery-3.5.1.min.js"></script>
 </body>
 </html>
