--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Rock, Paper, Scissors!</title>
 
 	<link rel="stylesheet" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 	<div class="intro-div">
@@ -26,7 +27,7 @@
 			Do you have what it takes to win?
 		</p>
 	</div>
-	<div class="input-div" style="visibility: hidden">
+	<div class="input-div invisible">
 		<div class="card">
 			<img src="imgs/template_avatar.png" alt="Avatar">
 			<div class="container">
@@ -38,6 +39,5 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
-	<script src="jquery-3.5.1.min.js"></script>
 </body>
 </html>
