--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 		</p>
 	</div>
 	<div class="input-div invisible">
+		<h1>Create your Avatar</h1>
+
 		<div class="card">
 			<img src="imgs/template_avatar.png" alt="Avatar">
 			<div id="user-input-container" class="card-text-container">
