added mechanism for inserting additional avatar cards

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="input-div invisible">
 		<h1>Create your Avatar</h1>
 
-		<div class="card">
+		<div class="avatar-card">
 			<img src="imgs/template_avatar.png" alt="Avatar">
 			<div id="user-input-container" class="card-text-container">
 				<label for="name" id="name-label">Name: </label>
