--- a/index.html
+++ b/index.html
@@ -30,21 +30,24 @@
 	<div class="input-div invisible">
 		<h1>Create your Avatar</h1>
 
-		<div class="avatar-card">
-			<img src="imgs/template_avatar.png" alt="Avatar">
-			<div id="user-input-container" class="card-text-container">
-				<label for="name" id="name-label">Name: </label>
-				<input 
-					type="text" id="name" placeholder="" maxlength="16"
-					pattern="([^\s][A-z0-9À-ž\s]*)"
-				>
-				<label for="epithet" id="epithet-label">Epithet: </label>
-				<input 
-					type="text" id="epithet" placeholder="" maxlength="16"
-					pattern="([^\s][A-z0-9À-ž\s]*)"
-				>
+		<div class="avatar-cards">
+			<div class="avatar-card">
+				<img src="imgs/template_avatar.png" alt="Avatar">
+				<div id="user-input-container" class="card-text-container">
+					<label for="name" id="name-label">Name: </label>
+					<input 
+						type="text" id="name" placeholder="" maxlength="16"
+						pattern="([^\s][A-z0-9À-ž\s]*)"
+					>
+					<label for="epithet" id="epithet-label">Epithet: </label>
+					<input 
+						type="text" id="epithet" placeholder="" maxlength="16"
+						pattern="([^\s][A-z0-9À-ž\s]*)"
+					>
+				</div>
 			</div>
 		</div>
+		
 	</div>
 	<script type="text/javascript" src="scroll-func.js"></script>
 	<script type="text/javascript" src="bundle.js"></script>
