fixed number of matched opponents in matching phase, fixed loading text

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</div>
 
   <div class="bottom-div invisible">
-    <h1>Create your Avatar</h1>
+    <h1 id="bottom-div-title">Create your Avatar</h1>
   
     <div class="avatar-cards">
       <div class="avatar-card">
