--- a/index.html
+++ b/index.html
@@ -16,26 +16,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="top-div">
-		<h1>Rock Paper Scissors!</h1>
-
-		<!-- col 80 is where you switch to a new line for readability -->
-		<p>
-			A battle royale! 64 Contestants pick their avatar and fight to the death...
-			with rock paper scissors! Contestants will face a random opponent each time,
-			the first to reach a score of 5 survives and moves on to face the next! This
-			goes on until one is left standing and is hailed champion!
-			<br><br>
-			The common rules apply, rock beats scissors and so on. Starting with a timer of
-			10 seconds, the timer decrementing by 1 each round. Contestants reserve the
-			right to surrender each round at the expense of their prize.
-			<br><br>
-			Do you have what it takes to win?
-		</p>
-	</div>
-
-  <div class="bottom-div invisible">
-    <h1 id="bottom-div-title">Create your Avatar</h1>
+  <div class="left-div">
+    <h1 id="left-div-title">Create your Avatar</h1>
   
     <div class="avatar-cards">
       <div class="avatar-card">
@@ -53,5 +35,23 @@
       </div>
     </div>
   </div>
+
+  <div class="right-div">
+		<h1>Rock Paper Scissors!</h1>
+
+		<!-- col 80 is where you switch to a new line for readability -->
+		<p>
+			A battle royale! 64 Contestants pick their avatar and fight to the death...
+			with rock paper scissors! Contestants will face a random opponent each time,
+			the first to reach a score of 5 survives and moves on to face the next! This
+			goes on until one is left standing and is hailed champion!
+			<br><br>
+			The common rules apply, rock beats scissors and so on. Starting with a timer of
+			10 seconds, the timer decrementing by 1 each round. Contestants reserve the
+			right to surrender each round at the expense of their prize.
+			<br><br>
+			Do you have what it takes to win?
+		</p>
+	</div>
 </body>
 </html>
