--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
           <img src="imgs/template_avatar.png" alt="Avatar">
           <div id="input-container" class="text-container">
             <input 
-              type="text" id="name" placeholder="Name" maxlength="16"
+              type="text" id="name" maxlength="16"
               pattern="([^\s][A-z0-9À-ž\s]*)"
             >
             <input 
-              type="text" id="epithet" placeholder="Epithet" maxlength="16"
+              type="text" id="epithet" maxlength="16"
               pattern="([^\s][A-z0-9À-ž\s]*)"
+            >
+            <input 
+              type="url" id="image" placeholder="Image URL: imgs/template_avatar.png"
             >
           </div>
         </div>
