--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                 <div class="control-card">
                   <b>S</b>
                 </div>
+
+                <div class="control-card">
+                  <b>0</b>
+                </div>
               </div>
             </div>
           </div>
@@ -111,6 +115,10 @@
 
                 <div class="control-card">
                   <b>S</b>
+                </div>
+
+                <div class="control-card">
+                  <b>0</b>
                 </div>
               </div>
 
