fixed onclick player select and timed enemy select, fixed matching phase # of players, fixed scoring in rounds

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="left-contestant-div">
             <div class="left-contestant-details">
               <p><b>Champion:</b> </p>
-              <p><b>Victories:</b> </p>
+              <p><b>Wins:</b> </p>
             </div>
 
             <div class="left-contestant-cards">
@@ -78,19 +78,19 @@
               </div>
 
               <div class="left-contestant-controls">
-                <div class="control-card">
+                <div id="player-rock" class="control-card">
                   <b>R</b>
                 </div>
 
-                <div class="control-card">
+                <div id="player-paper" class="control-card">
                   <b>P</b>
                 </div>
 
-                <div class="control-card">
+                <div id="player-scissors" class="control-card">
                   <b>S</b>
                 </div>
 
-                <div class="control-card">
+                <div id="left-score" class="control-card">
                   <b>0</b>
                 </div>
               </div>
@@ -100,7 +100,7 @@
           <div class="right-contestant-div">
             <div class="right-contestant-details">
               <p><b>Champion:</b> </p>
-              <p><b>Victories:</b> </p>
+              <p><b>Wins:</b> </p>
             </div>
 
             <div class="right-contestant-cards">
@@ -117,7 +117,7 @@
                   <b>S</b>
                 </div>
 
-                <div class="control-card">
+                <div id="right-score" class="control-card">
                   <b>0</b>
                 </div>
               </div>
@@ -130,6 +130,10 @@
                 </div>
               </div>
             </div>
+          </div>
+
+          <div class="round-result removed">
+            <ol></ol>
           </div>
         </div>
 
