added card color switching depending on previous result feature

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
 
             <div class="right-contestant-cards">
               <div class="right-contestant-controls">
-                <div class="control-card">
+                <div id="enemy-rock" class="control-card">
                   <b>R</b>
                 </div>
 
-                <div class="control-card">
+                <div id="enemy-paper" class="control-card">
                   <b>P</b>
                 </div>
 
-                <div class="control-card">
+                <div id="enemy-scissors" class="control-card">
                   <b>S</b>
                 </div>
 
