fixed card coloring during rounds, disabled player-induced hover and active effects on score and enemy cards

--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
               </div>
 
               <div class="left-contestant-controls">
-                <div id="player-rock" class="control-card">
+                <div id="player-rock" class="control-card player-card">
                   <b>R</b>
                 </div>
 
-                <div id="player-paper" class="control-card">
+                <div id="player-paper" class="control-card player-card">
                   <b>P</b>
                 </div>
 
-                <div id="player-scissors" class="control-card">
+                <div id="player-scissors" class="control-card player-card">
                   <b>S</b>
                 </div>
 
@@ -105,15 +105,15 @@
 
             <div class="right-contestant-cards">
               <div class="right-contestant-controls">
-                <div id="enemy-rock" class="control-card">
+                <div id="enemy-rock" class="control-card enemy-card">
                   <b>R</b>
                 </div>
 
-                <div id="enemy-paper" class="control-card">
+                <div id="enemy-paper" class="control-card enemy-card">
                   <b>P</b>
                 </div>
 
-                <div id="enemy-scissors" class="control-card">
+                <div id="enemy-scissors" class="control-card enemy-card">
                   <b>S</b>
                 </div>
 
