added placeholder for round-history

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="left-div">
       <h2 id="left-div-title">Create your Avatar</h2>
     
-      <div class="avatar-cards">
+      <div class="avatar-cards removed">
         <div class="avatar-card">
           <img src="imgs/template_avatar.png" alt="Avatar">
           <div id="input-container" class="text-container">
@@ -60,80 +60,87 @@
         </div>
       </div>
 
-      <div class="round-div invisible">
+      <div class="round-div">
         <div class="round-left-div">
-          <div class="left-contestant-div">
-            <div class="left-contestant-details">
-              <p><b>Champion:</b> </p>
-              <p><b>Wins:</b> </p>
-            </div>
-
-            <div class="left-contestant-cards">
-              <div class="avatar-card">
-                <img src="imgs/template_avatar.png" alt="Avatar">
-                <div class="text-container">
-                  <h4><b></b></h4>
-                  <p></p>
-                </div>
+          <div class="contestants-div">
+            <div class="left-contestant-div">
+              <div class="left-contestant-details">
+                <p><b>Champion:</b> </p>
+                <p><b>Wins:</b> </p>
               </div>
 
-              <div class="left-contestant-controls">
-                <div id="player-rock" class="control-card player-card">
-                  <b>R</b>
+              <div class="left-contestant-cards">
+                <div class="avatar-card">
+                  <img src="imgs/template_avatar.png" alt="Avatar">
+                  <div class="text-container">
+                    <h4><b></b></h4>
+                    <p></p>
+                  </div>
                 </div>
 
-                <div id="player-paper" class="control-card player-card">
-                  <b>P</b>
+                <div class="left-contestant-controls">
+                  <div id="player-rock" class="control-card player-card">
+                    <b>R</b>
+                  </div>
+
+                  <div id="player-paper" class="control-card player-card">
+                    <b>P</b>
+                  </div>
+
+                  <div id="player-scissors" class="control-card player-card">
+                    <b>S</b>
+                  </div>
+
+                  <div id="left-score" class="control-card">
+                    <b>0</b>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="right-contestant-div">
+              <div class="right-contestant-details">
+                <p><b>Champion:</b> </p>
+                <p><b>Wins:</b> </p>
+              </div>
+
+              <div class="right-contestant-cards">
+                <div class="right-contestant-controls">
+                  <div id="enemy-rock" class="control-card enemy-card">
+                    <b>R</b>
+                  </div>
+
+                  <div id="enemy-paper" class="control-card enemy-card">
+                    <b>P</b>
+                  </div>
+
+                  <div id="enemy-scissors" class="control-card enemy-card">
+                    <b>S</b>
+                  </div>
+
+                  <div id="right-score" class="control-card">
+                    <b>0</b>
+                  </div>
                 </div>
 
-                <div id="player-scissors" class="control-card player-card">
-                  <b>S</b>
-                </div>
-
-                <div id="left-score" class="control-card">
-                  <b>0</b>
+                <div class="avatar-card">
+                  <img src="imgs/template_avatar.png" alt="Avatar">
+                  <div class="text-container">
+                    <h4><b></b></h4>
+                    <p></p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          
-          <div class="right-contestant-div">
-            <div class="right-contestant-details">
-              <p><b>Champion:</b> </p>
-              <p><b>Wins:</b> </p>
-            </div>
 
-            <div class="right-contestant-cards">
-              <div class="right-contestant-controls">
-                <div id="enemy-rock" class="control-card enemy-card">
-                  <b>R</b>
-                </div>
-
-                <div id="enemy-paper" class="control-card enemy-card">
-                  <b>P</b>
-                </div>
-
-                <div id="enemy-scissors" class="control-card enemy-card">
-                  <b>S</b>
-                </div>
-
-                <div id="right-score" class="control-card">
-                  <b>0</b>
-                </div>
-              </div>
-
-              <div class="avatar-card">
-                <img src="imgs/template_avatar.png" alt="Avatar">
-                <div class="text-container">
-                  <h4><b></b></h4>
-                  <p></p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="round-result removed">
-            <ol></ol>
+          <div class="round-history">
+            <ol>
+              <li>this</li>
+              <li>is</li>
+              <li>a</li>
+              <li>test</li>
+            </ol>
           </div>
         </div>
 
