changed round history <ol> to <ul>, prepended instead of appended <li> to round history, color-coded round history <li> text, updated script to decrement timer every play to a minimum of 3 secs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="left-div">
       <h2 id="left-div-title">Create your Avatar</h2>
     
-      <div class="avatar-cards removed">
+      <div class="avatar-cards">
         <div class="avatar-card">
           <img src="imgs/template_avatar.png" alt="Avatar">
           <div id="input-container" class="text-container">
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div class="round-div">
+      <div class="round-div invisible">
         <div class="round-left-div">
           <div class="contestants-div">
             <div class="left-contestant-div">
@@ -135,12 +135,7 @@
           </div>
 
           <div class="round-history">
-            <ol>
-              <li>this</li>
-              <li>is</li>
-              <li>a</li>
-              <li>test</li>
-            </ol>
+            <ul></ul>
           </div>
         </div>
 
