finished game functionality

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div class="round-div invisible">
+      <div class="round-div removed">
         <div class="round-left-div">
           <div class="contestants-div">
             <div class="left-contestant-div">
@@ -141,6 +141,21 @@
 
         <div class="round-right-div">
           <ul></ul>
+        </div>
+      </div>
+
+      <div class="champion-div removed">
+        <div class="champion-details">
+          <p><b>Champion:</b> </p>
+          <p><b>Wins:</b> </p>
+        </div>
+
+        <div class="champion-card">
+          <img src="imgs/template_avatar.png" alt="Avatar">
+          <div class="text-container">
+            <h4><b></b></h4>
+            <p></p>
+          </div>
         </div>
       </div>
     </div>
