added game keydown select functionality

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 	  	<h2>Mechanics</h2>
 
 	  	<p>
-	  		Type your name and epithet (optional) on the left card to create your avatar
+	  		Type your name, epithet, and image link on the left card to create your avatar
         and press enter. You will be matched with 63 other <s>computers</s> players.
         You will fight using rock, paper, scissors, and the first to reach a score of 
         five (5) wins the round.
